test/programs/error-no-vars-in-ellipsis-constructor.defs
(def pattern
  ((no vars here) ..))